<resources>
    <string name="app_name">ShareChargingPile2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="map_location_btn">定位</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backup">返回</string>
    <string name="charging_pile_name">充电桩名字</string>
    <string name="_5_0km">5.0km</string>
    <string name="kh">/度</string>
    <string name="DC">直流：</string>
    <string name="AC">交流：</string>
    <string name="no_start_data">未有数据</string>
    <string name="used_time_info">使用数据：</string>
    <string name="comment">评价</string>
    <string name="to">~</string>
    <string name="sort_by_distance">按距离排序</string>
    <string name="sort_by_score">按评分排序</string>
    <string name="sort_by_used_time">按使用次数排序</string>
    <string name="sort">排序</string>
    <string name="title_activity_publish_station">PublishStationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Mon">一</string>
    <string name="Tue">二</string>
    <string name="Wen">三</string>
    <string name="Thu">四</string>
    <string name="Fri">五</string>
    <string name="Sat">六</string>
    <string name="Sun">日</string>
    <string name="all_day_open">全天开放</string>
    <string name="special_time">特定时间</string>
    <string name="all_day_time">00:00~23:59</string>
    <string name="input_address">输入地名</string>
    <string name="choose_position">位置选择:</string>
    <string name="station_name">充电站名:</string>
    <string name="blank" />
    <string name="share_charging_pile">共享充电桩</string>
    <string name="pay_offline">线下支付</string>
    <string name="pay_in_app">应用支付(敬请期待)</string>
    <string name="pay_way">支付方式:</string>
    <string name="yuan_per_kwh">元/度</string>
    <string name="yuan_per_hour">元/小时</string>
    <string name="charge_fee">充电费用:</string>
    <string name="park_fee">停车费用:</string>
    <string name="choose_position_1">选择位置</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="choose_time">选择时间</string>
    <string name="share_time">共享时段</string>
    <string name="open_day">共享日（选择每周开放时间）</string>
    <string name="station_info">发布的充电桩信息</string>
    <string name="add_pile">添加充电枪</string>
    <string name="remark">备注</string>
    <string name="electric_type">充电类型</string>
    <string name="fill_pile_info">填写充电桩信息</string>
    <string name="power_rate">功率</string>
    <string name="pile_num">充电桩数量</string>
    <string name="OK">确定</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="message">Message</string>
    <string name="send_message">发送</string>
    <string name="hello">你好</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="login_cn">登录</string>
    <string name="chargingpile_platform">共享充电桩平台</string>
    <string name="sign_up">Sign Up</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user">用户</string>
    <string name="old_password">old password</string>
    <string name="value">value</string>
    <string name="avatar">头像</string>
    <string name="personal_sign">个性签名</string>
    <string name="sign_out">注销登录</string>
    <string name="title_activity_map_module">MapModuleActivity</string>
    <string name="modify_station_info">修改充电站信息</string>
    <string name="clear">清空</string>
    <string name="station_info_1">充电站信息</string>
    <string name="money_unit">￥</string>
    <string name="current_electric_fee">当前电费</string>
    <string name="pile_cur_state">当前状态</string>
    <string name="charging_power_rate">充电功率</string>
    <string name="kwh">kw/h</string>
    <string name="use_charging_pile">使用充电桩</string>
    <string name="charging_pile_info">充电桩信息</string>
    <string name="owner_info">桩主信息</string>
    <string name="phone_num">手机号</string>
    <string name="begin_use">开始使用</string>
    <string name="per_degree">/度</string>
    <string name="order_info">订单信息</string>
    <string name="order_id">订单号</string>
    <string name="order_create_time">下单时间</string>
    <string name="cur_used_time">使用时间</string>
    <string name="finish_using">结束使用</string>
    <string name="predict_fee">预计费用</string>
    <string name="begin_charge_time">开始充电时间</string>
    <string name="total_sum">总共费用</string>
    <string name="pay">支付</string>
    <string name="need_to_pay">需支付:</string>
    <string name="monty_unit_chn">元</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="electric_charge">电费:</string>
    <string name="add">添加</string>
    <string name="confirm">确定</string>
    <string name="electric_charge1">电费</string>
    <string name="to_1"><![CDATA[>]]></string>
    <string name="tv_pile_id">充电桩编号</string>
    <string name="colon">:</string>
    <string name="sum">合计</string>
    <string name="station_position">充电站位置</string>
    <string name="fill_comment">填写评论</string>
    <string name="publish_comment">发表评论</string>
    <string name="service_score">服务评分</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="no_score">未有评</string>
    <string name="score">分</string>
    <string name="station_score">桩群评分</string>
    <string name="dc_sum">直流总数</string>
    <string name="ac_sum">交流总数</string>
    <string name="electric_charge_1">电费</string>
    <string name="screen_condition">筛选条件</string>
    <string name="to_screen"><![CDATA[筛选 >]]></string>
    <string name="one">一</string>
    <string name="book_pile">预约充电桩</string>
    <string name="my_appointment">我的预约</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="modify">修改</string>
</resources>