<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/user_info_background"
        tools:context=".ui.mainModule.notifications.CommentFragment">

        <TextView
            android:id="@+id/heading"
            style="@style/TextView.Heading"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/fill_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close_primary_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/heading"
            app:layout_constraintLeft_toLeftOf="@id/heading"
            app:layout_constraintTop_toTopOf="@+id/heading" />

        <LinearLayout
            android:id="@+id/layout_rb_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_score"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"/>

            <RatingBar
                android:id="@+id/rb_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:numStars="5"
                android:rating="3"
                android:isIndicator="false"
                style="?android:attr/ratingBarStyleSmall"
                android:stepSize="1" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:hint="@string/comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_rb_star">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_comment"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/publish_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment_text_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
