<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_begin_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="00:00"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginStart="10sp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/to"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10sp"
            android:layout_toEndOf="@id/tv_begin_time"/>

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:layout_toEndOf="@+id/to"
            android:gravity="center_vertical"
            android:textSize="18sp"
            tools:text="23:59" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/tv_end_time"
            android:layout_toStartOf="@+id/iv_edit"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/electric_charge"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_electric_charge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="1.0"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/yuan_per_kwh"
                android:layout_marginStart="5dp"/>
        </LinearLayout>






        
        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_delete"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toStartOf="@+id/iv_delete"
            android:src="@drawable/ic_editor"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/user_info_background" />

    </RelativeLayout>
</layout>
